  * opendiscussion: Don't allow editing discussion pages if discussion pages
    are disabled. (smcv)
  * poll: Add expandable option to allow users to easily add new choices to
    a poll.
  * trail: Avoid massive slowdown caused by pagetemplate hook when displaying
    dynamic cgi pages, which cannot use trail anyway.
  * Deal with empty diffurl in configuration.
  * cvs: Various fixes.

 -- Joey Hess <joeyh@debian.org>  Sat, 22 Dec 2012 16:15:24 -0400

ikiwiki (3.20121212) unstable; urgency=low

  * filecheck: Fix bug that prevented File::MimeInfo::Magic from ever
    being used.
  * openid: Display openid in Preferences page as a comment, so it can be
    selected in all browsers.

 -- Joey Hess <joeyh@debian.org>  Tue, 11 Dec 2012 12:12:12 -0400

ikiwiki (3.20121017) unstable; urgency=low

  * recentchangesdiff: fix further breakage to the template from 3.20120725 

 -- Joey Hess <joeyh@debian.org>  Tue, 16 Oct 2012 20:49:27 -0400

ikiwiki (3.20121016) unstable; urgency=low

  * monochrome: New theme, contributed by Jon Dowland.
  * rst: Ported to python 3, while still also being valid python 2.
    Thanks, W. Trevor King
  * Try to avoid a situation in which so many ikiwiki cgi wrapper programs
    are running, all waiting on some long-running thing like a site rebuild,
    that it prevents the web server from doing anything else. The current
    approach only avoids this problem for GET requests; if multiple cgi's
    run GETs on a site at the same time, one will display a "please wait"
    page for a configurable number of seconds, which then redirects to retry.
    To enable this protection, set cgi_overload_delay to the number of
    seconds to wait. This is not enabled by default.
  * Add back a 1em margin between archivepage divs.
  * recentchangesdiff: Correct broken template that resulted in duplicate
    diff icons being displayed, and bloated the recentchanges page with
    inline diffs when the configuration should have not allowed them.
