@@ -14,6 +14,8 @@ ikiwiki (3.20121213) UNRELEASED; urgency=low
     dynamic cgi pages, which cannot use trail anyway.
   * Deal with empty diffurl in configuration.
   * cvs: Various fixes.
+  * highlight: Now adds a span with class highlight-<extension> around
+    highlighted content, allowing for language-specific css styling.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 22 Dec 2012 16:15:24 -0400
 
